store events data v1

--- a/src/pages/events/events.scss
+++ b/src/pages/events/events.scss
@@ -3,9 +3,9 @@ $assertive :#ef473a;
   background: $assertive !important;
   color:white !important;
   z-index: 12 !important;
-  position: absolute !important; 
-  bottom: 20px !important;
-  right: 20px !important;
+  position: fixed !important; 
+  bottom: 70px !important;
+  right: 30px !important;
   border-radius: 50% !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26) !important;
   -webkit-transform: translate3d(0, 0, 0) !important;
